# Hexahedral-ReMeshing

./: .gitmodules  CMakeLists.txt  README.md
HexMeshing/: CMakeLists.txt  HexMeshing.cpp  HexMeshing.h  MeshFileReader.cpp  MeshFileReader.h  mesh.cpp  mesh.h
